rajyeturi16-salesforce/project/objects/Database__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Received__c</fullName>
        <label>Date Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FileN__c</fullName>
        <label>FileN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FileName__c</fullName>
        <label>FileName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Databases</relationshipLabel>
        <relationshipName>Databases</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Database</label>
    <nameField>
        <label>Database Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Databases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>